# ECE-5730-Digital-Microcontroller

./: CMakeLists.txt  README.md
Lab_1/Audio_Beep_Synthesis/: CMakeLists.txt  multitest.c
Lab_1/Audio_FFT/: CMakeLists.txt  fft copy.c  fft_merge.c  syncfft.c
Lab_2/Animation_Demo/: CMakeLists.txt  animation.c
Lab_3/MPU6050_IMU_Demo/: imu_demo.c
Lab_3/PWM_Demo/: CMakeLists.txt  pwm-demo.c
More_Demos/GPIO_Interrupt_Demo/: CMakeLists.txt
Project/: CMakeLists.txt  detect_chirp.c
Project/Audio_FFT/: CMakeLists.txt  fft.c
Project/Main/: CMakeLists.txt  led_cube.c  rp2040_shift_register.c
Project/Shift_Register/: 8_led_blink.c  CMakeLists.txt  rp2040_shift_register.c  shift_register_74hc595.h
Stepper_Motors/Delta_Robot_Demo/: CMakeLists.txt
Stepper_Motors/Stepper_Position_And_Speed_Control/: CMakeLists.txt
Stepper_Motors/Stepper_Position_Control/: CMakeLists.txt
Stepper_Motors/Stepper_Speed_Control/: CMakeLists.txt
VGA_Graphics/Barnsley_Fern/: CMakeLists.txt  barnsley_fern.c
VGA_Graphics/Game_of_Life/: CMakeLists.txt  conway.c  vga_graphics.c  vga_graphics.h
VGA_Graphics/Mandelbrot_Set/: CMakeLists.txt  mandelbrot_fixvfloat.c
VGA_Graphics/VGA_Graphics_Primitives/: CMakeLists.txt  vga_graphics_demo.c
